@@ -1,3 +1,14 @@
+2003-01-06  Dani Carbonell  <bocata@panete.net>
+
+	* src/dialogs.c (prefdialog_new): fixed the code that checks
+	if the window is opened or not, now it should not crash, even if
+	abused, also connected the "destroy" signal.
+	(connectingdialog_new): likewise (this should stop the connecting
+	crash).
+	(connectdialog_new): likewise, and I changed the button order, so
+	now it's HIG compliant (OK buttons in the lower right corner).
+	(teamdialog_new): likewise, and connected the "destroy" signal.
+
 2003-01-05  Jordi Mallach  <jordi@sindominio.net>
 
 	* NEWS, configure.in: released gtetrinet 0.5.0.
